fix(app:asctb-reporter): :bug: fixed compare drawer layout bug #1576

--- a/apps/asctb-reporter/src/app/components/compare/compare.component.scss
+++ b/apps/asctb-reporter/src/app/components/compare/compare.component.scss
@@ -3,6 +3,7 @@
 
 :host {
   display: block;
+  height: 100%;
 
   .sheet {
     margin-bottom: 1.5rem;
